--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URL=mongodb+srv://pritam762:pritam762@cluster0.8hq5bue.mongodb.net/crudApp
+
+
+JWT_ACCESS_TOKEN_SECRET_KEY=difhisudgigfadfagfsufiuasgasgfiasi
