--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ MONGO_URL=mongodb+srv://pritam762:pritam762@cluster0.8hq5bue.mongodb.net/crudApp
 
 
 JWT_ACCESS_TOKEN_SECRET_KEY=difhisudgigfadfagfsufiuasgasgfiasi
+
+
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_USER = 'arijithati69@gmail.com'
+EMAIL_PASS = 'ovrh jixw taqc zusp'
+EMAIL_FROM = 'arijithati69@gmail.com'
