--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ EMAIL_PORT = 587
 EMAIL_USER = 'arijithati69@gmail.com'
 EMAIL_PASS = 'ovrh jixw taqc zusp'
 EMAIL_FROM = 'arijithati69@gmail.com'
+
+
+FRONTEND_HOST=3000
